# pixelGroomer

./: .env.example  .gitignore  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Makefile  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.cursor/rules/: 001_memory_core.mdc  002_memory_commands.mdc  003_mode_definitions.mdc  005_memory_events.mdc  bash-compatibility.mdc  bilingual-docs.mdc  docs-examples-theme.mdc  git-commits.mdc  kiss-principle.mdc  languages.mdc  python-style.mdc  shellcheck.mdc  testing-requirements.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
doc/: configuration.de.md  configuration.en.md  examples.de.md  examples.en.md  preset-research.de.md  preset-research.en.md  scripts.de.md  scripts.en.md  web-planner.de.md  web-planner.en.md  workflow.de.md  workflow.en.md
docs/plans/: 2026-02-22-documentation-audit-design.md  2026-02-22-raw-develop-alternatives-design.md  2026-02-22-rawtherapee-preset-research.md  2026-02-22-sd-card-identity-design.md  2026-02-22-trip-import-design.md  2026-02-22-trip-import.md  2026-02-25-raw-jpg-split-pair-design.md
examples/: adventure-camp-workflow.sh  album-export.sh  daily-offload.sh  develop-album.sh  enduro-workflow.sh  holiday-import.sh
lib/: config.sh  exif_utils.py  utils.sh  venv.sh
templates/: .import.yaml.example  .import.yaml.identity
tests/: __init__.py  conftest.py
web/: app.py  config.py  requirements.txt
(+67 files in other folders)
